package com.example.laliga

data class Equipo (
    val id: Int,
    val nombre: String,
    val grupo:String,
    val estadio:String,
    val logo:String,
    val info: String
)

